infra/Section-5-Monitoring-and-Logging/VPC-Flow-Logs/sg.tf
resource "aws_security_group" "app_sg" {
  name        = "app-sg"
  description = "Security group for VPC Flow Logs demo"
  vpc_id      = data.aws_vpc.default.id

  # Allow HTTP traffic from anywhere
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [var.all_ips_cidr]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.all_ips_cidr]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.all_ips_cidr]
  }
}
